--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,9 @@ edition = "2021"
 
 [dependencies]
 aws-config = "1.1.5"
+aws-sdk-ecs = "1.15.0"
+aws-sdk-ssm = "1.15.0"
+clap = { version = "4.5.1", features = ["derive"] }
 env_logger = "0.11.2"
 log = "0.4.20"
-rusoto = "0.24.2"
-rusoto_core = "0.48.0"
-rusoto_ecs = "0.48.0"
-rusoto_ssm = "0.48.0"
 tokio = "1.36.0"
