--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,7 @@ aws-sdk-ecs = { version = "1.15.0", features = ["behavior-version-latest"] }
 clap = { version = "4.5.1", features = ["derive"] }
 env_logger = "0.11.2"
 log = "0.4.20"
-tokio = { version = "1.36.0", features = ["full"] }
+tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+
+[profile.release]
+lto = true
