--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssm-session"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,3 +15,4 @@ tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 
 [profile.release]
 lto = true
+codegen-units = 1
