--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
 aws-sdk-ecs = { version = "1.15.0", features = ["behavior-version-latest"] }
 clap = { version = "4.5.1", features = ["derive"] }
+ctrlc = "3.4.4"
 env_logger = "0.11.2"
 log = "0.4.20"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
